# healthcare-cohort-agent

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
hca_kg/: README.md  databricks.yml  pyproject.toml
hca_kg/resources/: hca_kg_etl.pipeline.yml  sample_job.job.yml
hca_kg/src/: sample_notebook.ipynb
hca_kg/src/hca_kg/: main.py
hca_kg/src/hca_kg_etl/: README.md
hca_kg/src/hca_kg_etl/transformations/: sample_trips_hca_kg.py  sample_zones_hca_kg.py
hca_kg/tests/: sample_taxis_test.py
healthcare_cohort_agent/: __init__.py  dataset.py  features.py  plots.py
healthcare_cohort_agent/modeling/: predict.py  train.py
