[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "healthcare_cohort_agent"
version = "0.0.1"
description = "An end-to-end Healthcare Intelligence platform that transforms unstructured clinical notes into a Knowledge Graph (KG) to perform cohort analysis, Graph Neural Network (GNN) based risk prediction, and Agentic RAG-driven insights."
authors = [
  { name = "Vivek Murali" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["healthcare_cohort_agent"]
include = ["pyproject.toml", "healthcare_cohort_agent/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["healthcare_cohort_agent"]
force-sort-within-sections = true

